improve comparison module

--- a/detector/detector/template/history.html
+++ b/detector/detector/template/history.html
@@ -29,7 +29,8 @@
     <link href="/static/assets_table/css/fresh-bootstrap-table.css" rel="stylesheet" />
 
     <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <!--link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"-->
+    <link rel="stylesheet" type="text/css" href="/static/assets_V3/css/max.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <link href="/static/assets_V3/css/pe-icon-7-stroke.css" rel="stylesheet" />
     
@@ -174,6 +175,9 @@
                         <table id="fresh-table" class="table">
                             <thead>
                                 <th data-field="mycheckbox" data-checkbox ="true"></th>
+                                <!--th data-field="myradio" data-radio ="true"></th-->
+                                <!--th data-field="myradio" data-formatter="radioFormatter" data-events="radioOperateEvents"></th-->
+                                <th>Specify Baseline</th>
                                 <th data-field="id">ID</th>
                                 <th data-field="name" data-sortable="true">Name</th>
                                 <th data-field="date" data-sortable="true">Date Time</th>
@@ -183,8 +187,11 @@
                             </thead>
                             <tbody>
                                 {% for record in history_records%}
-                                <tr class = "clickable-row" data-href = "/record/{{record.date}}/">
+                                <!--tr class = "clickable-row" data-href = "/record/{{record.date}}/"-->
+                                <tr>
                                     <td></td>
+                                    <td><input type = "radio" name = "main_record" value = "{{record.file}}"></td>
+                                    <!--td></td-->
                                     <td>{{record.id}}</td>
                                     <td>{{record.file}}</td>
                                     <td>{{record.date}}</td>
@@ -225,6 +232,24 @@
         var $table = $('#fresh-table'),
             full_screen = false;
 
+        window.operateEvents = {
+                'click .remove': function (e, value, row, index) {
+                    $table.bootstrapTable('remove', {
+                        field: 'id',
+                        values: [row.id]
+                    });
+                    remove_record(e, value, row, index);
+                },
+                
+                'click .edit': function (e, value, row, index) {
+                    var url = "/record/" + row['date'];
+                    //alert(JSON.stringify(row));
+                    window.document.location = url;
+                },
+                
+            };
+
+
         $().ready(function(){
             $table.bootstrapTable({
                 toolbar: ".toolbar",
@@ -256,21 +281,6 @@
             $(window).resize(function () {
                 $table.bootstrapTable('resetView');
             });
-
-
-            window.operateEvents = {
-                'click .remove': function (e, value, row, index) {
-                    $table.bootstrapTable('remove', {
-                        field: 'id',
-                        values: [row.id]
-                    });
-                    remove_record(e, value, row, index);
-                },
-                
-
-            };
-
-
         });
 
 
@@ -281,6 +291,13 @@
                 '</a>',
                 '<a data-toggle="modal" rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">',
                     '<i class="fa fa-remove"></i>',
+                '</a>',
+            ].join('');
+        }
+        function radioFormatter(value, row, index) {
+            return [
+                '<a rel="tooltip" title="Edit" class="table-action radio-button" href="javascript:void(0)" title="radio">',
+                    '<i class="fa fa-edit"></i>',
                 '</a>',
             ].join('');
         }
@@ -324,6 +341,17 @@
     <script type="text/javascript">
     function gather_record_info()
     {
+        var radios = document.getElementsByName("main_record");
+        var selected_record_position;
+        for (var i = 0; i < radios.length; ++i)
+        {
+            if (radios[i].checked)
+            {
+                selected_record = radios[i].value;
+            }
+        }
+
+
         var all_selections = [];
         all_selections = $("#fresh-table").bootstrapTable('getAllSelections');
         var all_selections_length = all_selections.length;
@@ -332,13 +360,18 @@
         {
             data[all_selections[i]['name']] = all_selections[i]['date'];
         }
+        data['baseline'] = selected_record;
         $.ajax({
             "type": "POST",
             "dataType": "json",
             "url": "/make_comparison/",
             "data": data,
             "success": function(result) {
-                window.location = '/comparison_result/'
+                if(result.status == 800){
+                    window.location = "/error/comparison_error";
+                }else {
+                    window.location = '/comparison_result/';
+                }
             },
             "error" : function(xhr, errmsg, err){
                 window.location = '/error/500';
