--- a/detector/detector/template/login.html
+++ b/detector/detector/template/login.html
@@ -74,7 +74,7 @@
 		                      </div>
 		                      <div class="modal-footer">
 		                          <button data-dismiss="modal" class="btn btn-default" type="button">Cancel</button>
-		                          <button class="btn btn-theme" type="button"><a href = "/login/">Submit</a></button>
+		                          <button class="btn btn-theme" type="button"><a href = "/get_password/">Submit</a></button>
 		                      </div>
 		                  </div>
 		              </div>
